--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://jachandler.com/"
+baseURL = "https://jachandler.com/"
 languageCode = "en-us"
 title = "Jonathan Chandler"
 theme = "docdock" 
